--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "valuelink": "^1.5.4",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
