Added sidebar+navbar and the page schema in the server

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,6 +11,7 @@
     },
     "rules": {
         "react/forbid-prop-types": 0,
-        "react/jsx-filename-extension":0
+        "react/jsx-filename-extension":0,
+        "jsx-ally/label-has-for": 0
     }
 }
