--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^3.3.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.2.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "url-loader": "^0.6.2",
