Manage page almost ready

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.12.9",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-ckeditor-component": "^1.0.7",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
