--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.3",
+    "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
