--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "^4.0.0",
     "concurrently": "^3.5.1",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.3",
     "font-awesome": "^4.7.0",
+    "html-to-draftjs": "^1.3.0",
     "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.2",
     "jquery": "^3.3.1",
     "path": "^0.12.7",
     "popper.js": "^1.12.9",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-ckeditor-component": "^1.0.7",
     "react-dom": "^16.2.0",
+    "react-draft-wysiwyg": "^1.12.10",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
