Authentication with jwt & mongodb done

--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,11 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
     "mongoose-timestamp": "^0.6.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
